[gd_scene load_steps=3 format=3 uid="uid://6e870xwxbt7x"]

[ext_resource type="Theme" uid="uid://b64xeaa12phvk" path="res://Assets/User Interface/Themes/theme_default.tres" id="1_k4r2u"]
[ext_resource type="Script" uid="uid://b767imp5cfri1" path="res://Scripts/UI/game_over_screen.gd" id="2_uhxt5"]

[node name="Game Over Screen" type="Control"]
process_mode = 2
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k4r2u")
script = ExtResource("2_uhxt5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.215686)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -81.0
offset_right = 100.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Over Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Game OVer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="Retry Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Main Menu Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Retry Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
